# builder-check

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: error.tsx  globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/session/: route.ts
app/api/validate/: route.ts
app/report/: page.tsx  report-content.tsx
backend/: cli.py  main.py  pyproject.toml
backend/agents/: observability.py  orchestrator.py  specialist.py  tools.py
backend/config/: agents.yaml  questions.yaml
backend/sessions/: manager.py
backend/tests/: conftest.py  test_agents.py  test_orchestrator.py  test_results.py  test_tools.py
components/agents/: AgentDetailModal.tsx  AgentVizRenderer.tsx  CompactAgentCard.tsx  agent-card.tsx  agent-skeleton.tsx  agents-grid.tsx
components/agents/visualizations/: AreaChartViz.tsx  BarChartHorizViz.tsx  BarChartViz.tsx  DataTableViz.tsx  DistributionViz.tsx  DonutViz.tsx  EntityListViz.tsx  GaugeViz.tsx  HeatmapViz.tsx  InsightCalloutViz.tsx  KpiCardViz.tsx  LineChartViz.tsx  ProgressListViz.tsx  RadarChartViz.tsx  ScatterViz.tsx  ScoreCardViz.tsx  StackedBarViz.tsx  TimelineViz.tsx  TitleCardViz.tsx
components/dashboard/: dashboard-header.tsx  mini-score-card.tsx  overall-score-card.tsx  score-overview-grid.tsx  score-ring.tsx  validation-dashboard.tsx
components/landing/: hero-section.tsx  research-input.tsx
components/ui/: card.tsx  chart.tsx  logo.tsx  markdown.tsx
lib/: agent-widget-config.ts  agents.ts  scoring.ts  viz-layout.ts  viz-schemas.ts
